# algomusic

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  algoMusic  cmake_install.cmake  code structure  code_structure.drawio  makefile  program  save-format.md  test.c
src/: RPN.c  audioMath.c  audioMath.h  config.h  controll.c  controll.h  main.c  structure.h
src/math/: audioMath.c  audioMath.h  computer.c  computer.h  computerFunctions.c  computerFunctions.h  sharedTypes.h
src/parser/: dataFileParser.c  dataFileParser.h
src/playBack/: mixer.c  mixer.h  playBack.c  playBack.h
src/sequencer/: secuanceStorage.c  secuanceStorage.h  sharedSecuancerTypes.h
src/ui/: commonTabFunctions.c  commonTabFunctions.h  keystrokes.c  keystrokes.h  mainMenu.c  mainMenu.h  startMenu.c  startMenu.h  ui.c  ui.h
testProject/: data.txt
testProject/sequances/: testSequance.txt
